packages/base/data/test/error/cabecadeboi-neigh-line-invalid3.gwt
0 121 cabecadeboi900.shp object_id_ 
C00L00 C00L01